--- a/GiveLife-frontend/src/app/app.component.html
+++ b/GiveLife-frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
 
     <h1>Install Bootstrap 4 in Angular 11 - HDTuto.com</h1>
 
@@ -24,4 +24,7 @@
 
     </div>
 
-</div>
+</div> -->
+<app-header></app-header>
+<app-home-page></app-home-page>
+<app-footer></app-footer>
