--- a/GiveLife-frontend/src/app/app.component.html
+++ b/GiveLife-frontend/src/app/app.component.html
@@ -25,6 +25,4 @@
     </div>
 
 </div> -->
-<app-header></app-header>
-<app-home-page></app-home-page>
-<app-footer></app-footer>
+<app-post-form></app-post-form>
