--- a/GiveLife-frontend/src/app/components/sign-in/sign-in.component.html
+++ b/GiveLife-frontend/src/app/components/sign-in/sign-in.component.html
@@ -1,1 +1,48 @@
-<p>sign-in works!</p>
+<div class="container-fluid">
+    <div class="container">
+        <div class="row">
+            <div class="col-md">
+                <div id="formDiv">
+                    <h2>Sign In</h2>
+                    <br>
+                    <form name="signInForm" #signInForm="ngForm" (ngSubmit)="signInForm.valid && onSubmit(signInForm)">
+            
+                        <!-- National ID -->
+                        <div class="form-group">
+                            <input class="form-control formElement" type="text" #NID="ngModel" [(ngModel)]="userService.selectedUser.NID"
+                                name="NID" placeholder="National ID" required minlength="14"
+                                pattern="(2|3)[0-9][1-9][0-1][1-9][0-3][1-9](01|02|03|04|11|12|13|14|15|16|17|18|19|21|22|23|24|25|26|27|28|29|31|32|33|34|35|88)\d\d\d\d\d">
+                            <div class="msg" *ngIf="NID.touched && NID.errors">
+                                <span *ngIf="NID.errors.required">National ID is required.... </span>
+                                <span *ngIf="NID.errors.pattern">National ID pattern is wroong.... </span>
+                                <span *ngIf="NID.errors.minlength">National ID length must be 14 characters.... </span>
+                            </div>
+                        </div>
+            
+
+                        <div class="form-group">
+                            <input class="form-control formElement" type="password" #password="ngModel"
+                                [(ngModel)]="userService.selectedUser.password" name="password" placeholder="Password" minlength="6"
+                                required>
+                            <div class="msg" *ngIf="password.touched && password.errors">
+                                <span *ngIf="password.errors.required" class="validation-message">password is required.... </span>
+                                <span *ngIf="password.errors.minlength" class="validation-message">password length must be more
+                                    than 6 characters.... </span>
+                            </div>
+                        </div>
+            
+                        <!-- Button -->
+                        <div id="submitBtn" class="form-group">
+                            <button type="submit" id="submit" class="button" [disabled]="signInForm.invalid==true">
+                                SUBMIT </button>
+                        </div>
+                        <br>
+                    </form>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+   
