change value of options in profile comp

--- a/GiveLife-frontend/src/app/components/post-form/post-form.component.html
+++ b/GiveLife-frontend/src/app/components/post-form/post-form.component.html
@@ -15,10 +15,10 @@
                                 <p class="text-warning mb-0">Need Category</p>
                                 <select class="form-control" id="pet-select" form="usrform" required>
                                    
-                                    <option value="dog">Food</option>
-                                    <option value="cat">Medicine</option>
-                                    <option value="hamster">Clothes</option>
-                                    <option value="hamster">Money</option>
+                                    <option value="food">Food</option>
+                                    <option value="medicine">Medicine</option>
+                                    <option value="clothes">Clothes</option>
+                                    <option value="money">Money</option>
                                 </select>
                             </div>
                             <div class="col-sm-8">
