--- a/GiveLife-frontend/src/app/components/home-page/home-page.component.html
+++ b/GiveLife-frontend/src/app/components/home-page/home-page.component.html
@@ -45,8 +45,8 @@
         <span class="sr-only">Next</span>
     </a>
 </div> -->
-
-<div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
+<app-header></app-header>
+<!-- <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active" data-interval="10000">
             <img src="https://rayramsay.com/wp-content/uploads/2018/10/teamhands.png" class="d-block w-100" alt="...">
@@ -66,7 +66,30 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
     </a>
-</div>
+</div> -->
+
+<section class="dnow-regionsWrap">
+    <div class="dnow-regionsContent">
+        <div class="card bg-dark text-white">
+            <img src="https://rayramsay.com/wp-content/uploads/2018/10/teamhands.png" alt="">
+            <div class="overlay-div"></div>
+            <div class="card-img-overlay d-flex align-items-center container">
+                <div class="row  mb-5">
+                    <div class=" col-sm-12 text-content">
+                        <div class="tolargefont">
+
+
+                            <h1 class="card-title ">
+                                We Can Help Someone
+                            </h1>
+                            <!-- <button class="btn" id="div5">Donate</button> -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 <div class="container-fluid mb-5">
     <div class="text-center mt-5">
         <h1></h1>
@@ -119,4 +142,46 @@
             </div>
         </div>
     </div>
+</div>
+<div id="photoscards">
+    <div class="row text-center text-lg-center">
+
+        <div class=" col-md-2 ">
+            <a href="#" class="d-block mb-4 ">
+                <img class="img-fluid img-thumbnail" src="http://bighearts.wgl-demo.net/wp-content/uploads/2020/08/partners_01.png" alt="">
+            </a>
+        </div>
+        <div class="col-md-2 ">
+            <a href="#" class="d-block mb-4 ">
+                <img class="img-fluid img-thumbnail" src="http://bighearts.wgl-demo.net/wp-content/uploads/2020/08/partners_02.png" alt="">
+            </a>
+        </div>
+        <div class="col-md-2 ">
+            <a href="#" class="d-block mb-4">
+                <img class="img-fluid img-thumbnail" src="http://bighearts.wgl-demo.net/wp-content/uploads/2020/08/partners_04.png" alt="">
+            </a>
+        </div>
+        <div class="col-md-2">
+            <a href="#" class="d-block mb-4 ">
+                <img class="img-fluid img-thumbnail" src="http://bighearts.wgl-demo.net/wp-content/uploads/2020/08/partners_05.png" alt="">
+            </a>
+        </div>
+        <div class="col-md-2">
+            <a href="#" class="d-block mb-4 ">
+                <img class="img-fluid img-thumbnail" src="http://bighearts.wgl-demo.net/wp-content/uploads/2020/08/partners_06.png" alt="">
+            </a>
+        </div>
+        <div class="col-md-2">
+            <a href="#" class="d-block mb-4 ">
+                <img class="img-fluid img-thumbnail" src="http://bighearts.wgl-demo.net/wp-content/uploads/2020/08/partners_01.png" alt="">
+            </a>
+        </div>
+
+    </div>
+
+</div>
+
+<div class="container">
+
+
 </div>
