--- a/GiveLife-frontend/src/app/components/home-page/home-page.component.css
+++ b/GiveLife-frontend/src/app/components/home-page/home-page.component.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins|Ubuntu&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300&family=Roboto+Slab&display=swap');
 * {
     box-sizing: border-box;
     margin: 0;
@@ -75,3 +76,61 @@ body {
     cursor: pointer;
     background-image: linear-gradient(-45deg, #27b88d 0%, #22dd73 100%)
 }
+
+.dnow-regionsContent {
+    background-color: SlateGray;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    opacity: 0.8;
+}
+
+.tolargefont {
+    font-size: 2cm;
+}
+
+.dnow-regionsContent .card-img-overlay img {
+    max-height: 40rem;
+}
+
+.overlay-div {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    background-color: #000;
+    opacity: .7;
+}
+
+#photoscards {
+    padding: 5rem;
+    mask-position: center;
+    background-image: url(http://bighearts.wgl-demo.net/wp-content/uploads/2020/08/bg.jpg);
+}
+
+
+/* @import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300&family=Roboto+Slab&display=swap');
+.div5 {
+    grid-area: 3 / 3 / 4 / 4;
+    margin-top: 0px;
+    padding: 10px;
+    border: 1px #F74F22 solid;
+    border-radius: 30px;
+    outline: none;
+    width: 100%;
+    height: 45%;
+    border: 1px;
+    border-radius: 30px;
+    background-color: #F74F22;
+    font-weight: normal;
+    color: white;
+    font-size: large;
+}
+
+button:hover {
+    font-size: larger;
+    font-weight: lighter;
+    background-color: white;
+    border: 1px solid #F74F22;
+    color: #F74F22;
+    transition: 0.7s;
+} */
