--- a/GiveLife-frontend/src/app/test/test.component.html
+++ b/GiveLife-frontend/src/app/test/test.component.html
@@ -1,2 +1,3 @@
-<button (click)="login()">login</button>
 <button (click)="getProfile()">profile</button>
+<button (click)="getCoordinatorPosts()">coordinatorPost</button>
+<button (click)="getRegionPosts()">RegionPost</button>
