--- a/GiveLife-frontend/src/app/components/post/post.component.css
+++ b/GiveLife-frontend/src/app/components/post/post.component.css
@@ -29,17 +29,17 @@
 }
 .div2 { 
     grid-area: 2 / 2 / 3 / 3; 
-    margin-top: 45px;
+    margin-top: 35px;
     padding-right: 3px;
 }
 .div3 { 
     grid-area: 2 / 3 / 3 / 4; 
-    padding-top: 45px;
+    padding-top: 35px;
     margin-right: 3px;
 }
 .div4 { 
     grid-area: 2 / 4 / 3 / 5; 
-    padding-top: 45px;
+    padding-top: 35px;
 }
 .div5 { 
     grid-area: 3 / 3 / 4 / 4; 
@@ -47,20 +47,31 @@
     padding: 10px;
 
 }
-input, textarea{
+.input, .textarea{
     border: 1px #F74F22 solid;
     border-radius: 30px;
     outline: none;
 }
+.input{
+    padding-left: 15px;
+    height: 40px;
+}
+.p{
+    padding-left: 15px;
+}
+.textarea{
+    height: inherit;
+}
 button{
     width: 100%;
-    height: 45%;
+    height: 55px;
     border: 1px;
     border-radius: 30px;
     background-color: #F74F22;
     font-weight: normal;
     color: white;
     font-size: large;
+    margin-top: 20px;
 }
 button:hover {
     font-size: larger;
