--- a/GiveLife-frontend/src/app/components/post/post.component.html
+++ b/GiveLife-frontend/src/app/components/post/post.component.html
@@ -2,16 +2,18 @@
     <div class="row">
         <div class="col-md">
             <div class="parent">
-                <div class="div1">
-                    <textarea class="ele1 form-control" type="text" name="comment" form="usrform"
+                <div class="div1" *ngFor="let item of postsArray">
+                    <p class="ele1 form-control textarea">{{item.postTxt}}</p>
+                    <!-- <textarea class="ele1 form-control" type="text" name="comment" form="usrform"
                         rows="5" required>
-                    </textarea>
+                    </textarea> -->
                 </div>
-                <div class="div2"><input class="form-control" placeholder="Required Amount.."></div>
-                <div class="div3"> <input class="form-control" placeholder="NeedCategory.."></div>
-                <div class="div4"> <input class="form-control" placeholder="Rest Amount.."></div>
+                <div class="div2" *ngFor="let item of postsArray"><p class="p">Required Amount..</p><p class="form-control input">{{item.requiredAmount}}</p></div>
+                <div class="div3" *ngFor="let item of postsArray"><p class="p">Need Category..</p><p class="form-control input">{{item.needCatogry}}</p></div>
+                <div class="div4" *ngFor="let item of postsArray"><p class="p">Rest Amount..</p><p class="form-control input">{{item.restAmount}}</p></div>
                 <div class="div5"><button type="submit"> Donate <i>♥</i> </button></div>
             </div>
         </div>
     </div>
 </div>
+
