--- a/GiveLife-frontend/src/app/components/header/header.component.html
+++ b/GiveLife-frontend/src/app/components/header/header.component.html
@@ -9,7 +9,7 @@
 
         </li>
     </ul>
-    <ul class="nav justify-content-center">
+    <!-- <ul class="nav justify-content-center">
         <li class="nav-item">
             <a class="nav-link active text-dark mb-0 h6" href="Home">Home</a>
         </li>
@@ -20,7 +20,7 @@
         <li class="nav-item">
             <a class="nav-link active text-dark mb-0 h6" href="Blog">Blog</a>
         </li>
-    </ul>
+    </ul> -->
     <ul class="nav justify-content-end">
 
         <li class="nav-item">
