--- a/GiveLife-frontend/src/app/components/header/header.component.html
+++ b/GiveLife-frontend/src/app/components/header/header.component.html
@@ -23,13 +23,18 @@
     </ul> -->
     <ul class="nav justify-content-end">
 
-        <li class="nav-item">
-            <button type="button" class="btn btn-outline-danger"><img src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/user-512.png" width="20" height="20"></button>
+        <li class="nav-item dropdown">
+            <a class="nav-link  dropdown-toggle" href="#" data-bs-toggle="dropdown"> <button type="button" class="btn btn-outline-danger"><img src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/user-512.png" width="20" height="20"></button> </a>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#"> Login</a></li>
+                <li><a class="dropdown-item" href="#">Reigster </a></li>
+                <!-- <li><a class="dropdown-item" href="#"> Submenu item 3 </a></li> -->
+            </ul>
 
         </li>
 
         <li class="nav-item">
-            <button type="button" id="tomakespace" class="btn btn-outline-danger">DONATE NOW <i>♥</i> </button>
+            <button type="button" id="tomakespace" style="margin-top: 0.4rem;" class="btn btn-outline-danger">DONATE NOW <i>♥</i> </button>
         </li>
 
     </ul>
