--- a/GiveLife-frontend/src/app/components/cupon/cupon.component.html
+++ b/GiveLife-frontend/src/app/components/cupon/cupon.component.html
@@ -5,22 +5,12 @@
                 <form class="card-details ">
                     <div class="form-group">
                         <p class="text-warning mb-0">Cupon Identity</p>
-<<<<<<< HEAD
-                        <p type="text" name="name" placeholder="Identity" value="6868786868668">{{cupon.cuponIdentity}}</p>
-                    </div>
-                    <div class="form-group">
-                        <p class="text-warning mb-0">NationalID</p>
-                        <p type="text" name="name" placeholder="Id" value="68644448668">{{cupon.caseNationalId}}</p>
-                    </div>
-                    <div class="form-group pt-2">
-=======
-                        <p type="text" name="name" placeholder="Identity" value="6868786868668">4576</p>
+                        <p type="text" name="name" placeholder="Identity">{{cupon.cuponIdentity}}</p>
 
                         <p class="text-warning mb-0">NationalID</p>
-                        <p type="text" name="name" placeholder="Id" value="68644448668">29712100455700</p>
+                        <p type="text" name="name" placeholder="Id">{{cupon.caseNational.nationalId}}</p>
 
 
->>>>>>> c9aac83eda0a84a921cf3fee5dc23d175aeb961b
                         <div class="row d-flex">
                             <div class="col-sm-8">
                                 <p class="text-warning mb-0">Case Name</p>
