--- a/GiveLife-frontend/src/app/test/test.component.html
+++ b/GiveLife-frontend/src/app/test/test.component.html
@@ -1,3 +1,6 @@
 <button (click)="getProfile()">profile</button>
 <button (click)="getCoordinatorPosts()">coordinatorPost</button>
 <button (click)="getRegionPosts()">RegionPost</button>
+<button (click)="donnatePosts()">donnate</button>
+<button (click)="publishPosts()">publishPosts</button>
+<button (click)="logOut()">logOut</button>
