--- a/GiveLife-frontend/src/app/components/post/post.component.css
+++ b/GiveLife-frontend/src/app/components/post/post.component.css
@@ -1,85 +1,82 @@
-@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300&family=Roboto+Slab&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Mitr:wght@300&family=Roboto+Slab&display=swap");
 
-*{
-    box-sizing: border-box;
-    font-family: 'Mitr', sans-serif;
+* {
+  box-sizing: border-box;
+  font-family: "Mitr", sans-serif;
 }
 
-.divkbera{
-    padding: 20px;
-    
+.divkbera {
+  padding: 20px;
 }
 
-.divsmall{
-    border-radius: 5px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+.divsmall {
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
 }
 
 .parent {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-    margin-top: 120px;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  margin-top: 120px;
 }
-    
-.div1 { 
-    grid-area: 1 / 2 / 2 / 5; 
-}
-.div2 { 
-    grid-area: 2 / 2 / 3 / 3; 
-    margin-top: 35px;
-    padding-right: 3px;
-}
-.div3 { 
-    grid-area: 2 / 3 / 3 / 4; 
-    padding-top: 35px;
-    margin-right: 3px;
-}
-.div4 { 
-    grid-area: 2 / 4 / 3 / 5; 
-    padding-top: 35px;
-}
-.div5 { 
-    grid-area: 3 / 3 / 4 / 4; 
-    margin-top: 0px;
-    padding: 10px;
 
+.div1 {
+  grid-area: 1 / 2 / 2 / 5;
 }
-.input, .textarea{
-    border: 1px #F74F22 solid;
-    border-radius: 30px;
-    outline: none;
+.div2 {
+  grid-area: 2 / 2 / 3 / 3;
+  margin-top: 35px;
+  padding-right: 3px;
 }
-.input{
-    padding-left: 15px;
-    height: 40px;
+.div3 {
+  grid-area: 2 / 3 / 3 / 4;
+  padding-top: 35px;
+  margin-right: 3px;
 }
-.p{
-    padding-left: 15px;
+.div4 {
+  grid-area: 2 / 4 / 3 / 5;
+  padding-top: 35px;
 }
-.textarea{
-    height: inherit;
+.div5 {
+  grid-area: 3 / 3 / 4 / 4;
+  margin-top: 0px;
+  padding: 10px;
 }
-button{
-    width: 100%;
-    height: 55px;
-    border: 1px;
-    border-radius: 30px;
-    background-color: #F74F22;
-    font-weight: normal;
-    color: white;
-    font-size: large;
-    margin-top: 20px;
+.input,
+.textarea {
+  border: 1px #f74f22 solid;
+  border-radius: 30px;
+  outline: none;
+}
+.input {
+  padding-left: 15px;
+  height: 40px;
+}
+.p {
+  padding-left: 15px;
+}
+.textarea {
+  height: inherit;
+}
+button {
+  width: 100%;
+  height: 55px;
+  border: 1px;
+  border-radius: 30px;
+  background-color: #f74f22;
+  font-weight: normal;
+  color: white;
+  font-size: large;
+  margin-top: 20px;
 }
 button:hover {
-    font-size: larger;
-    font-weight: lighter;
-    background-color: white;
-    border:1px solid #F74F22;
-    color: #F74F22;
-    transition: 0.7s;
+  font-size: larger;
+  font-weight: lighter;
+  background-color: white;
+  border: 1px solid #f74f22;
+  color: #f74f22;
+  transition: 0.7s;
 }
-
-    
