--- a/GiveLife-frontend/src/app/components/profile/profile.component.html
+++ b/GiveLife-frontend/src/app/components/profile/profile.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
-<div class="container">
+<!-- <div class="container">
     <div class="row no-gutters">
         <div class="col">
             <br>
@@ -17,7 +17,65 @@
 
         </div>
     </div>
+</div> -->
+<!-- //////////////// -->
+<div class="page-content page-container" id="page-content">
+    <div class="padding">
+        <div class="row container d-flex justify-content-center">
+            <div class="col-xl-6 col-md-12">
+                <div class="card user-card-full">
+                    <div class="row m-l-0 m-r-0">
+                        <div class="col-sm-4 bg-c-lite-green user-profile">
+                            <div class="card-block text-center text-white">
+                                <div class="m-b-25"> <img src="https://img.icons8.com/bubbles/100/000000/user.png" class="img-radius" alt="User-Profile-Image"> </div>
+                                <h6 class="f-w-600">Youssef Elsayed</h6>
+                                <p>Region Coordinator</p> <i class=" mdi mdi-square-edit-outline feather icon-edit m-t-10 f-16"></i>
+                            </div>
+                        </div>
+                        <div class="col-sm-8">
+                            <div class="card-block">
+                                <h6 class="m-b-20 p-b-5 b-b-default f-w-600">Information</h6>
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <p class="m-b-10 f-w-600">Region</p>
+                                        <h6 class="text-muted f-w-400">Ismailia</h6>
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <p class="m-b-10 f-w-600">Wallet Balance</p>
+                                        <h6 class="text-muted f-w-400">400.00</h6>
+                                    </div>
+                                </div>
+                                <h6 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600">Magesterials</h6>
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <a id="tomakespace" class="btn btn-outline-danger" routerLink="/posts" (click)="PostsClick()">Posts</a>
+
+                                        <!-- <p class="m-b-10 f-w-600">Recent</p>
+                                        <h6 class="text-muted f-w-400">Sam Disuja</h6> -->
+                                    </div>
+                                    <br>
+                                    <br>
+                                    <div class="col-sm-6">
+                                        <a id="tomakespace" class="btn btn-outline-danger" routerLink="/cupons" (click)="CuponsClick()">Cupons</a>
+                                        <!-- <p class="m-b-10 f-w-600">Most Viewed</p>
+                                        <h6 class="text-muted f-w-400">Dinoter husainm</h6> -->
+                                    </div>
+                                </div>
+                                <ul class="social-link list-unstyled m-t-40 m-b-10">
+                                    <li><a href="#!" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="facebook" data-abc="true"><i class="mdi mdi-facebook feather icon-facebook facebook" aria-hidden="true"></i></a></li>
+                                    <li><a href="#!" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="twitter" data-abc="true"><i class="mdi mdi-twitter feather icon-twitter twitter" aria-hidden="true"></i></a></li>
+                                    <li><a href="#!" data-toggle="tooltip" data-placement="bottom" title="" data-original-title="instagram" data-abc="true"><i class="mdi mdi-instagram feather icon-instagram instagram" aria-hidden="true"></i></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+<hr class="new4">
+<app-post></app-post>
 <!-- <button class="btn btn-lg btn-outline-primary" (click)="openpostform(postform)">Post form</button>
 <br>
 <br>
@@ -62,116 +120,3 @@
         </button>
     </div>
 </ng-template> -->
-
-<ng-template #cupon let-modal>
-    <div class="modal-header">
-        <h4 class="modal-title" id="modal-basic-title">
-            Cupon
-        </h4>
-        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-  
-            <span aria-hidden="true">
-                ×
-            </span>
-        </button>
-    </div>
-    <div class="modal-body">
-        <form>
-            <div class="form-group">
-                <p class="text-warning mb-0">Cupon Identity</p>
-                <p type="text" name="name" placeholder="Identity" value="6868786868668">4576</p>
-
-                <p class="text-warning mb-0">NationalID</p>
-                <p type="text" name="name" placeholder="Id" value="68644448668">29712100455700</p>
-
-
-                <div class="row d-flex">
-                    <div class="col-sm-8">
-                        <p class="text-warning mb-0">Case Name</p>
-                        <p type="text" name="exp" placeholder="Person Name" size="20" id="exp" minlength="20" maxlength="20" value="samira elsayed">samira elsayed</p>
-                    </div>
-                    <div class="col-sm-8">
-                        <p class="text-warning mb-0">Amount of Money</p>
-                        <p type="Money" name="exp" placeholder="EGP" size="20" id="exp" value="600.00">600.00</p>
-                    </div>
-                    <div class="col-sm-8">
-                        <p class="text-warning mb-0">Expiration</p>
-                        <p type="date" name="cvv" placeholder="&#9679;&#9679;&#9679;" size="1" minlength="20" maxlength="20" alue="10/12/2022">10/12/2022</p>
-                    </div>
-
-                </div>
-
-            </div>
-        </form>
-    </div>
-    <div class="modal-footer">
-        <div class="form-group">
-            <button type="button" class="btn btn-outline-dark div5" (click)="modal.close('Save click')">
-            OK
-        </button>
-        </div>
-    </div>
-</ng-template>
-
-
-<ng-template #postform let-modal>
-    <div class="modal-header">
-        <h4 class="modal-title" id="modal-basic-title">
-            Write a Post
-        </h4>
-        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-  
-            <span aria-hidden="true">
-                ×
-            </span>
-        </button>
-    </div>
-    <div class="modal-body">
-        <form name="postform" #postform="ngForm" (ngSubmit)="onSubmit(postform)">
-            <!-- /////////////////////////////////// -->
-            <div class="form-group">
-                <p class="text-warning mb-0">Post Text</p>
-                <textarea class="form-control formElement" type="text" name="posttext" form="usrform" placeholder="Enter text here..." required></textarea>
-                <div class="msg" *ngIf="posttext.touched && posttext.errors">
-                    <span *ngIf="posttext.errors.required">post text is required.... </span>
-
-                </div>
-            </div>
-            <div class="form-group">
-                <p class="text-warning mb-0">NationalID</p>
-                <input class="form-control" type="text" name="name" form="usrform" length="14" placeholder="Id" value="" required>
-            </div>
-            <div class="row d-flex">
-                <div class="col-sm-8">
-                    <div class="form-group">
-                        <p class="text-warning mb-0">Need Category</p>
-                        <select class="form-control" id="pet-select" form="usrform" required>
-                           
-                            <option value="food">Food</option>
-                                    <option value="medicine">Medicine</option>
-                                    <option value="clothes">Clothes</option>
-                                    <option value="money">Money</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="col-sm-8">
-                    <div class="form-group">
-                        <p class="text-warning mb-0"> Required Amount</p>
-                        <input class="form-control" type="Money" name="exp" placeholder="0.00" form="usrform" size="20" id="exp" value="" required>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <div class="form-group">
-                        <button type="submit" class="btn btn-outline-dark" class="div5" (click)="modal.close('Save click')" [disabled]="postform.invalid==true">
-                            Publish
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </form>
-    </div>
-    <!-- /////////////////// -->
-
-
-
-</ng-template>
