profile-cupon finished

--- a/GiveLife-frontend/src/app/components/post/post.component.html
+++ b/GiveLife-frontend/src/app/components/post/post.component.html
@@ -1,4 +1,4 @@
-<div class="container divkbera">
+<!-- <div class="container divkbera">
     <div class="row">
         <div class="col-md">
             <div class="parent">
@@ -11,6 +11,32 @@
                 <div class="div3"> <input class="form-control" placeholder="NeedCategory.."></div>
                 <div class="div4"> <input class="form-control" placeholder="Rest Amount.."></div>
                 <div class="div5"><button type="submit"> Donate <i>♥</i> </button></div>
+            </div>
+        </div>
+    </div>
+</div> -->
+
+<div class="container mx-auto">
+    <div class="row">
+        <div class="col">
+            <div class="card " style="width: 14rem;">
+                <form class="card-details ">
+                    <div class="row">
+                        <div class="col-md">
+                            <div class="parent">
+                                <div class="div1">
+                                    <textarea class="ele1 form-control" type="text" name="comment" form="usrform" rows="5" required>
+                                    </textarea>
+                                </div>
+
+                                <div class="div2"><input class="form-control" placeholder="Required Amount.."></div>
+                                <div class="div3"> <input class="form-control" placeholder="NeedCategory.."></div>
+                                <div class="div4"> <input class="form-control" placeholder="Rest Amount.."></div>
+                                <div class="div5"><button type="submit"> Donate <i>♥</i> </button></div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
