--- a/GiveLife-frontend/src/app/components/cupon/cupon.component.css
+++ b/GiveLife-frontend/src/app/components/cupon/cupon.component.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-body {
+ @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+ /*body {
     background: linear-gradient(to right, rgba(235, 224, 232, 1) 52%, rgba(254, 191, 1, 1) 53%, rgba(254, 191, 1, 1) 100%);
     font-family: 'Roboto', sans-serif
 }
@@ -7,66 +7,82 @@ body {
 .card {
     border-radius: 5px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-    max-width: 450px;
+    max-width: 300px;
     border-radius: 15px;
-    margin: 150px 0 150px;
-    padding: 35px;
+    margin: 50px 0 50px;
+    padding: 15px;
     padding-bottom: 20px !important
-}
-
-.card-details{
-    width: 60%;
-    margin-left: inherit;
-    margin-right: 10%;
-}
-
-.heading {
-    color: #C1C1C1;
-    font-size: 14px;
-    font-weight: 500
-}
-
-img {
-    transform: translate(160px, -10px)
-}
-
-img:hover {
-    cursor: pointer
-}
-
-.text-warning {
-    font-size: 12px;
-    font-weight: 500;
-    color: #edb537 !important
-}
-
-#cno {
-    transform: translateY(-10px)
-}
-
-input {
-    border-bottom: 1.5px solid #E8E5D2 !important;
-    font-weight: bold;
-    border-radius: 0;
-    border: 0
-}
-
-.form-group input:focus {
-    border: 0;
-    outline: 0
-}
-
-.col-sm-5 {
-    padding-left: 90px
-}
-
-.btn {
-    background: #F3A002 !important;
-    border: none;
-    border-radius: 30px;
-    margin-top: 9px;
-}
-
-.btn:focus {
-    box-shadow: none
-}
+} */
+ 
+ .card-details {
+     width: 70%;
+     margin-left: 10%;
+     margin-right: 10%;
+ }
+ 
+ .heading {
+     color: #C1C1C1;
+     font-size: 14px;
+     font-weight: 500
+ }
+ 
+ img {
+     transform: translate(160px, -10px)
+ }
+ 
+ img:hover {
+     cursor: pointer
+ }
+ 
+ .text-warning {
+     font-size: 13px;
+     font-weight: 500;
+     color: #F74F22 !important
+ }
+ 
+ #cno {
+     transform: translateY(-10px)
+ }
+ 
+ input {
+     border-bottom: 1.5px solid #E8E5D2 !important;
+     font-weight: bold;
+     border-radius: 0;
+     border: 0
+ }
+ 
+ .form-group input:focus {
+     border: 0;
+     outline: 0
+ }
+ 
+ .col-sm-5 {
+     padding-left: 90px
+ }
+ 
+ .btn {
+     background: #F3A002 !important;
+     border: none;
+     border-radius: 30px;
+     margin-top: 9px;
+ }
+ 
+ .btn:focus {
+     box-shadow: none
+ }
+ 
+ body {
+     background: linear-gradient(to right, rgba(235, 224, 232, 1) 52%, rgba(254, 191, 1, 1) 53%, rgba(254, 191, 1, 1) 100%);
+     font-family: 'Roboto', sans-serif
+ }
+ 
+ .card {
+     margin: 10px;
+     display: grid;
+     border-radius: 5px;
+     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+     border-radius: 15px;
+     margin: 50px 0 50px;
+     padding: 15px;
+     padding-bottom: 20px !important
+ }
