--- a/GiveLife-frontend/src/app/components/cupons/cupons.component.html
+++ b/GiveLife-frontend/src/app/components/cupons/cupons.component.html
@@ -1,1 +1,10 @@
-<p>cupons works!</p>
+<app-header></app-header>
+
+<app-cupon></app-cupon>
+<!-- <app-cupon></app-cupon>
+<app-cupon></app-cupon>
+<app-cupon></app-cupon>
+<app-cupon></app-cupon>
+<app-cupon></app-cupon>
+<app-cupon></app-cupon>
+<app-cupon></app-cupon> -->
