--- a/GiveLife-frontend/src/app/components/post/post.component.css
+++ b/GiveLife-frontend/src/app/components/post/post.component.css
@@ -1,16 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300&family=Roboto+Slab&display=swap');
-
-*{
+* {
     box-sizing: border-box;
     font-family: 'Mitr', sans-serif;
 }
 
-.divkbera{
+.divkbera {
     padding: 20px;
-    
 }
 
-.divsmall{
+.divsmall {
     border-radius: 5px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
 }
@@ -23,36 +21,42 @@
     grid-row-gap: 0px;
     margin-top: 120px;
 }
-    
-.div1 { 
-    grid-area: 1 / 2 / 2 / 5; 
+
+.div1 {
+    grid-area: 1 / 2 / 2 / 5;
 }
-.div2 { 
-    grid-area: 2 / 2 / 3 / 3; 
+
+.div2 {
+    grid-area: 2 / 2 / 3 / 3;
     margin-top: 45px;
     padding-right: 3px;
 }
-.div3 { 
-    grid-area: 2 / 3 / 3 / 4; 
+
+.div3 {
+    grid-area: 2 / 3 / 3 / 4;
     padding-top: 45px;
     margin-right: 3px;
 }
-.div4 { 
-    grid-area: 2 / 4 / 3 / 5; 
+
+.div4 {
+    grid-area: 2 / 4 / 3 / 5;
     padding-top: 45px;
 }
-.div5 { 
-    grid-area: 3 / 3 / 4 / 4; 
+
+.div5 {
+    grid-area: 3 / 3 / 4 / 4;
     margin-top: 0px;
     padding: 10px;
-
 }
-input, textarea{
+
+input,
+textarea {
     border: 1px #F74F22 solid;
     border-radius: 30px;
     outline: none;
 }
-button{
+
+button {
     width: 100%;
     height: 45%;
     border: 1px;
@@ -62,13 +66,28 @@ button{
     color: white;
     font-size: large;
 }
+
 button:hover {
     font-size: larger;
     font-weight: lighter;
     background-color: white;
-    border:1px solid #F74F22;
+    border: 1px solid #F74F22;
     color: #F74F22;
     transition: 0.7s;
 }
 
-    
+body {
+    background: linear-gradient(to right, rgba(235, 224, 232, 1) 52%, rgba(254, 191, 1, 1) 53%, rgba(254, 191, 1, 1) 100%);
+    font-family: 'Roboto', sans-serif
+}
+
+.card {
+    margin: 10px;
+    display: grid;
+    border-radius: 5px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+    border-radius: 15px;
+    margin: 50px 0 50px;
+    padding: 15px;
+    padding-bottom: 20px !important
+}
