--- a/GiveLife-frontend/src/app/components/posts/posts.component.css
+++ b/GiveLife-frontend/src/app/components/posts/posts.component.css
@@ -24,3 +24,31 @@
     color: #F74F22;
     transition: 0.7s;
 }
+
+body {
+    background: linear-gradient(to right, rgba(235, 224, 232, 1) 52%, rgba(254, 191, 1, 1) 53%, rgba(254, 191, 1, 1) 100%);
+    font-family: 'Roboto', sans-serif
+}
+
+.card {
+    margin: 10px;
+    display: grid;
+    border-radius: 5px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+    border-radius: 15px;
+    margin: 50px 0 50px;
+    padding: 15px;
+    padding-bottom: 20px !important
+}
+
+app-post {
+    display: inline-block;
+    justify-content: center;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+    /* margin: 0 auto;
+  
+    float: none;
+    
+    margin-bottom: 10px; */
+}
