--- a/GiveLife-frontend/src/app/components/post/post.component.html
+++ b/GiveLife-frontend/src/app/components/post/post.component.html
@@ -4,10 +4,10 @@
             <div class="parent" *ngFor="let item of postsArray">
                 <div class="div1">
                     <p class="ele1 form-control textarea">{{item.postTxt}}</p>
-                    <!-- <textarea class="ele1 form-control" type="text" name="comment" form="usrform"
+                     <textarea class="ele1 form-control" type="text" name="comment" form="usrform"
                         rows="5" required>
                     </textarea> -->
-                </div>
+<!-- </div>
                 <div class="div2">
                     <p class="p">Required Amount..</p>
                     <p class="form-control input">{{item.requiredAmount}}</p>
@@ -28,7 +28,7 @@
             </div>
         </div>
     </div>
-</div> -->
+</div>  -->
 
 <div class="container mx-auto">
     <div class="row">
