--- a/GiveLife-frontend/src/app/components/post/post.component.html
+++ b/GiveLife-frontend/src/app/components/post/post.component.html
@@ -1,4 +1,10 @@
-<div class="container divkbera">
+<div class="sidenav">
+   <button>Goods</button>
+
+
+   
+  </div>
+<div class="container divkbera main">
     <div class="row">
         <div class="col-md">
             <div class="parent">
