--- a/GiveLife-frontend/src/app/components/post/post.component.html
+++ b/GiveLife-frontend/src/app/components/post/post.component.html
@@ -4,7 +4,7 @@
             <div class="parent">
                 <div class="div1" *ngFor="let item of postsArray">
                     <p class="ele1 form-control textarea">{{item.postTxt}}</p>
-                    <!-- <textarea class="ele1 form-control" type="text" name="comment" form="usrform"
+                    <textarea class="ele1 form-control" type="text" name="comment" form="usrform"
                         rows="5" required>
                     </textarea> -->
                 </div>
