--- a/GiveLife-frontend/src/app/components/profile/profile.component.html
+++ b/GiveLife-frontend/src/app/components/profile/profile.component.html
@@ -30,6 +30,9 @@
                                 <div class="m-b-25"> <img src="https://img.icons8.com/bubbles/100/000000/user.png" class="img-radius" alt="User-Profile-Image"> </div>
                                 <h6 class="f-w-600">Youssef Elsayed</h6>
                                 <p>Region Coordinator</p> <i class=" mdi mdi-square-edit-outline feather icon-edit m-t-10 f-16"></i>
+                                <div class="col-sm-6">
+                                    <a class="btn btn-outline-light" routerLink="/posts" (click)="PostsClick()">Logout</a>
+                                </div>
                             </div>
                         </div>
                         <div class="col-sm-8">
