--- a/GiveLife-frontend/src/app/components/profile/profile.component.html
+++ b/GiveLife-frontend/src/app/components/profile/profile.component.html
@@ -31,7 +31,7 @@
                                 <h6 class="f-w-600">Youssef Elsayed</h6>
                                 <p>Region Coordinator</p> <i class=" mdi mdi-square-edit-outline feather icon-edit m-t-10 f-16"></i>
                                 <div class="col-sm-6">
-                                    <a style="margin-left:2rem;" class="btn btn-outline-light" routerLink="/posts" (click)="PostsClick()">Logout</a>
+                                    <a style="margin-left:2rem;" class="btn btn-outline-light" routerLink="/home" (click)="LogoutClick()">Logout</a>
                                 </div>
                             </div>
                         </div>
